--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ header {
   margin-bottom: 20px;
   padding: 20px;
   border-radius: 15px;
-  background: rgba(255, 255, 255, 0.9);
+  background: hsla(232, 55%, 72%, 0.58);
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
   width: 100%;
   max-width: 800px;
@@ -40,13 +40,13 @@ header {
 header h1 {
   font-size: 2.5rem;
   margin-bottom: 10px;
-  color: #2c3e50;
+  color: #d5e0eaff;
   text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 }
 
 header p {
   font-size: 1.2rem;
-  color: #7f8c8d;
+  color: #d4eef0ff;
   max-width: 600px;
   margin: 0 auto;
 }
@@ -64,7 +64,7 @@ header p {
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  background: white;
+  background: rgba(255, 255, 255, 0.05);
   border-radius: 20px;
   padding: 30px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.12);
@@ -78,11 +78,10 @@ header p {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 10px;
+  border-radius: 20px;
   overflow: visible;
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
-  background: #f0f5ff;
-  border: 8px solid white;
+  background: #f0f5ff24;
 }
 
 .controls {
@@ -99,7 +98,7 @@ header p {
   border: none;
   border-radius: 50px;
   cursor: pointer;
-  font-weight: 600;
+  font-weight: 400;
   transition: all 0.3s ease;
   box-shadow: 0 4px 8px rgba(50, 50, 93, 0.15), 0 1px 3px rgba(0, 0, 0, 0.1);
 }
@@ -140,7 +139,7 @@ header p {
   border: none;
   border-radius: 30px;
   cursor: pointer;
-  font-weight: 600;
+  font-weight: 400;
   transition: all 0.3s ease;
   background: linear-gradient(to right, #9c88ff, #8c7ae6);
   color: white;
@@ -163,7 +162,7 @@ header p {
 }
 
 .feature {
-  background: white;
+  background: rgba(255, 255, 255, 0.042);
   border-radius: 15px;
   padding: 20px;
   text-align: center;
@@ -180,25 +179,25 @@ header p {
 .feature h3 {
   margin: 0;
   font-size: 1rem;
-  color: #7f8c8d;
-  font-weight: 600;
+  color: #c9e7e9ff;
+  font-weight: 400;
 }
 
 .feature p {
   margin: 10px 0 0;
   font-size: 1.3rem;
-  color: #2c3e50;
-  font-weight: 700;
+  color: #97c2ecff;
+  font-weight: 500;
   text-transform: capitalize;
 }
 
 .footer1 {
   margin-top: 20px;
   text-align: center;
-  color: #7f8c8d;
+  color: #dbebecff;
   font-size: 0.9rem;
   padding: 20px;
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 0.07);
   border-radius: 10px;
   width: 100%;
   max-width: 800px;
